--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ node_js:
   - "0.10"
 
 before_install:
-  - true && export BROWSERSTACK_ACCESS_KEY=<your accesskey here>
+  - true && export BROWSERSTACK_ACCESS_KEY=wS48LvyE4tsWJBYtBqfp
