--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.0.1",
   "description": " Selenium examples for Mocha and BrowserStack Automate",
   "scripts": {
-    "sample-test": "browserstack-node-sdk mocha test/sample_test.js --timeout=60000",
-    "sample-local-test": "browserstack-node-sdk mocha test/sample_local_test.js --timeout=60000",
-    "postinstall": "npm update browserstack-node-sdk"
+    "sample-test": "browserstack-node-sdk mocha test/sample_test.js --timeout=600000",
+    "sample-local-test": "browserstack-node-sdk mocha test/sample_local_test.js --timeout=600000",
+    "execute-testCases": "browserstack-node-sdk mocha test/excuteTC.js --timeout=600000",
+    "testCase": "browserstack-node-sdk mocha test/logintest.spec.js --timeout=600000",
+    "testCase1": "browserstack-node-sdk mocha test/logintest.spec.js --timeout=600000",
+    "postinstall": "npm update browserstack-node-sdk",
+    "wdio": "wdio run ./wdio.conf.js"
   },
   "repository": {
     "type": "git",
@@ -24,11 +28,30 @@
   },
   "homepage": "https://github.com/browserstack/mocha-browserstack#readme",
   "dependencies": {
+    "browsermob-proxy": "^1.0.13",
     "browserstack-local": "^1.4.8",
+    "browserstack-webdriver": "^2.41.1",
+    "chai": "^4.4.1",
+    "chai-as-promised": "^7.1.1",
+    "google-spreadsheet": "^4.1.1",
+    "googleapis": "^129.0.0",
     "mocha": "^9.2.2",
-    "selenium-webdriver": "4.1.2"
+    "mocha-allure-reporter": "^1.4.0",
+    "properties-reader": "^2.3.0",
+    "selenium-webdriver": "^4.16.0"
   },
   "devDependencies": {
+    "@wdio/allure-reporter": "^8.31.1",
+    "allure-commandline": "^2.26.0",
+    "allure-mocha": "^2.11.1",
+    "browsermob-proxy-client": "^0.1.2",
     "browserstack-node-sdk": "latest"
+  },
+  "mocha": {
+    "parallel": true,
+    "reporter": "allure-mocha",
+    "reporterOptions": {
+      "resultsDir": "allure-results"
+    }
   }
 }
