--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -25,16 +25,18 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         
+    - name: Install dependencies
+      run: |
+        npm install
+        npm install -g allure-commandline
+        npm install -g mocha
+        npm install mocha-allure-reporter
+        
     - name: Update /etc/hosts
       run: |
         echo "3.230.10.186 ttl.lemnisk.co" | sudo tee -a /etc/hosts
         echo "3.230.10.186 lemniskapi2.lemnisk.co" | sudo tee -a /etc/hosts
         echo "3.230.10.186 appbackend.lemnisk.co" | sudo tee -a /etc/hosts
-
-    - name: Install dependencies
-      run: |
-        npm install
-        npm install -g allure-commandline
 
     - name: Run Selenium Tests
       run: npx mocha -R allure-mocha ./test/segmenttest.spec.js
