--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -40,6 +40,7 @@ jobs:
 
     - name: Run Selenium Tests
       run: npx mocha -R allure-mocha ./test/logintest.spec.js
+      working-directory: ${{ github.workspace }}
 
     - name: Generate and Serve Allure Reports
       run: |
