--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20]
+        node-version: [18]
 
     steps:
     - name: Checkout repository
@@ -27,6 +27,7 @@ jobs:
         
     - name: Install dependencies
       run: |
+        npm ci
         npm install
         npm install -g allure-commandline
         npm install mocha-allure-reporter
