--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -40,14 +40,10 @@ jobs:
         echo "3.230.10.186 appbackend.lemnisk.co" | sudo tee -a /etc/hosts
 
     - name: Run Selenium Tests
-      run: npx mocha test/segmenttest.spec.js || exit 0
+      run: npx mocha ./test/segmenttest.spec.js || exit 0
       continue-on-error: true
 
     - name: Debugging Information
       run: |
        # Print the contents of the test directory for inspection
        ls -R ./test
-       
-    - name: Generate and Serve Allure Reports
-      run: |
-        allure generate --clean ./allure-results && allure open
