--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -11,39 +11,39 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18,19,20]
+        node-version: [18, 19, 20]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-        token: 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
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          token: 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
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        
-    - name: Install dependencies
-      run: |
-        npm ci
-        npm install
-        npm install mocha@latest mocha-allure-reporter@latest --save-dev
-        npm install -g allure-commandline
-        npm install mocha-allure-reporter
-        
-    - name: Update /etc/hosts
-      run: |
-        echo "3.230.10.186 ttl.lemnisk.co" | sudo tee -a /etc/hosts
-        echo "3.230.10.186 lemniskapi2.lemnisk.co" | sudo tee -a /etc/hosts
-        echo "3.230.10.186 appbackend.lemnisk.co" | sudo tee -a /etc/hosts
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: Run Selenium Tests
-      run: npx mocha ./test/segmenttest.spec.js || exit 0
-      continue-on-error: true
+      - name: Install dependencies
+        run: |
+          npm ci
+          npm install
+          npm install mocha@latest mocha-allure-reporter@latest --save-dev
+          npm install -g allure-commandline
+          npm install mocha-allure-reporter
 
-    - name: Debugging Information
-      run: |
-       # Print the contents of the test directory for inspection
-       ls -R ./test
+      - name: Update /etc/hosts
+        run: |
+          echo "3.230.10.186 ttl.lemnisk.co" | sudo tee -a /etc/hosts
+          echo "3.230.10.186 lemniskapi2.lemnisk.co" | sudo tee -a /etc/hosts
+          echo "3.230.10.186 appbackend.lemnisk.co" | sudo tee -a /etc/hosts
+
+      - name: Run Selenium Tests
+        run: npx mocha ./test/segmenttest.spec.js || exit 0
+        continue-on-error: true
+
+      - name: Debugging Information
+        run: |
+          # Print the contents of the test directory for inspection
+          ls -R ./test
