--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -29,7 +29,8 @@ jobs:
         run: |
           npm ci
           npm install
-          npm install mocha@latest mocha-allure-reporter@latest --save-dev
+          npm install mocha@latest
+          #npm install mocha@latest mocha-allure-reporter@latest --save-dev
           npm install -g allure-commandline
           npm install mocha-allure-reporter
 
