--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -24,12 +24,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-
+          
       - name: Install dependencies
         run: |
           npm ci
           npm install
           npm install mocha@latest
+          npm install mocha-selenium
+          npm install chai
           #npm install mocha@latest mocha-allure-reporter@latest --save-dev
           npm install -g allure-commandline
           npm install mocha-allure-reporter
