--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -27,10 +27,9 @@ jobs:
           
       - name: Install dependencies
         run: |
-          npm ci
           npm install
           npm install mocha@latest
-          npm install mocha-selenium
+          #npm install mocha-selenium
           npm install chai
           #npm install mocha@latest mocha-allure-reporter@latest --save-dev
           npm install -g allure-commandline
@@ -41,10 +40,16 @@ jobs:
           echo "3.230.10.186 ttl.lemnisk.co" | sudo tee -a /etc/hosts
           echo "3.230.10.186 lemniskapi2.lemnisk.co" | sudo tee -a /etc/hosts
           echo "3.230.10.186 appbackend.lemnisk.co" | sudo tee -a /etc/hosts
-
+          
+      - name: Start selenoid
+        uses: Xotabu4/selenoid-github-action@v2
+        
+      - uses: actions/checkout@v1
+      - run: npm ci
+      
       - name: Run Selenium Tests
         #run: npx mocha --verbose ./test/segmenttest.spec.js || exit 0
-        run: npm run test -- --verbose || exit 0
+        run: npm run test || exit 0
         continue-on-error: true
         working-directory: ${{ github.workspace }}
 
