--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "devDependencies": {
     "allure-commandline": "^2.26.0",
-    "allure-mocha": "^2.11.1",
+    "allure-mocha": "^2.11.1"
   },
   "mocha": {
     "parallel": false,
