--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "node test/segmenttest.spec.js",
-    "e2e-test": "start-server-and-test dev <http://localhost:3000> test"
+    "test": "node test/segmenttest.spec.js"
   },
   "repository": {
     "type": "git",
