--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -4,7 +4,15 @@ on:
   push:
     branches:
       - master
-
+  workflow_dispatch:
+    inputs:
+      browser:
+        type: choice
+        description: Which browser to test
+        required: true
+        options:
+          - chrome
+          
 jobs:
   test:
     runs-on: ubuntu-latest
