--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -63,8 +63,8 @@ jobs:
       
       - name: Run Selenium Tests
         #run: npx mocha --verbose ./test/segmenttest.spec.js || exit 0
-        run: npm run test || exit 0
-        continue-on-error: true
+        run: npm run test
+        #continue-on-error: true
         working-directory: ${{ github.workspace }}
 
       - name: Debugging Information
