--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "npx mocha test/segmenttest.spec.js"
+    "test": "npm mocha test/segmenttest.spec.js"
   },
   "repository": {
     "type": "git",
