--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "npm run mocha-test",
-    "mocha-test": "mocha test/segmenttest.spec.js"
+    "test": "npm run test"
   },
   "repository": {
     "type": "git",
