--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "npm run ./test/logintest.spec.js"
+    "test": "npm ./test/logintest.spec.js"
   },
   "repository": {
     "type": "git",
