--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
-          npm install --global mocha@latest
+          npm install mocha --save-dev
           #npm install mocha-selenium
           npm install chai
           #npm install mocha@latest mocha-allure-reporter@latest --save-dev
