--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
+          npm install -g mocha@latest
 
       - name: Update /etc/hosts
         run: |
