--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -24,6 +24,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+
+      - uses: browser-actions/setup-chrome@v1
+      - run: chrome --version
           
       - name: Install dependencies
         run: |
