--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "chai": "^4.4.1",
     "chai-as-promised": "^7.1.1",
     "properties-reader": "^2.3.0",
-    "selenium-webdriver": "^4.16.0",
-    "mocha-selenium": "^0.1.1"
+    "selenium-webdriver": "^4.16.0"
   },
   "devDependencies": {
     "allure-commandline": "^2.26.0",
