--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": " Selenium examples for Mocha and BrowserStack Automate",
   "scripts": {
-    "test": "npx mocha test/logintest.js"
+    "test": "node ./node_modules/mocha/bin/mocha './test/logintest.js'"
   },
   "repository": {
     "type": "git",
