--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
+          npm install --global mocha
       
       - name: Update /etc/hosts
         run: |
