--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "devDependencies": {
     "allure-commandline": "^2.26.0",
     "allure-mocha": "^2.12.2",
-    "mocha": "^10.3.0",
+    "mocha": "*",
     "mocha-allure-reporter": "^1.4.0",
     "mochawesome": "^7.1.3",
     "monocart-reporter": "^2.3.1"
