--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -19,7 +19,10 @@ jobs:
         with:
           fetch-depth: 0
           token: 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
-
+          
+      - name: Install mocha
+        run: npm install -g mocha
+        
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -30,7 +33,6 @@ jobs:
           
       - name: Install dependencies
         run: |
-          npm install --global mocha
           npm install
       
       - name: Update /etc/hosts
