--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -49,7 +49,7 @@ jobs:
       
       - name: Run Selenium Tests
         #run: npx mocha --verbose ./test/segmenttest.spec.js || exit 0
-        run: npm run test || exit 0
+        run: npm run test
         continue-on-error: true
         working-directory: ${{ github.workspace }}
 
