--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18, 19, 20, 21]
+        node-version: [21]
 
     steps:
       - name: Checkout repository
