--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -50,9 +50,11 @@ jobs:
       - name: Run Selenium Tests
         #run: npx mocha --verbose ./test/segmenttest.spec.js || exit 0
         run: npm run test
+        env:
+         NODE_ENV: test
         continue-on-error: true
         working-directory: ${{ github.workspace }}
-
+        
       - name: Debugging Information
         run: |
           set -x
