--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -24,7 +24,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          
+                
+      - name: Install dependencies
+        run: npm install
+
       - name: Install mocha
         run: npm install -g mocha
 
@@ -33,10 +36,6 @@ jobs:
         
       - uses: browser-actions/setup-chrome@v1
       - run: chrome --version
-          
-      - name: Install dependencies
-        run: |
-          npm install
       
       - name: Update /etc/hosts
         run: |
