--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -48,7 +48,9 @@ jobs:
       
       - name: Run Selenium Tests
         #run: npx mocha --verbose ./test/segmenttest.spec.js || exit 0
-        run: npm run test
+        run: |
+         npx mocha --version
+         npm run test
         env:
          NODE_ENV: test
         continue-on-error: true
