--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -50,7 +50,7 @@ jobs:
         #run: npx mocha --verbose ./test/segmenttest.spec.js || exit 0
         run: |
          npx mocha --version
-         npm run test
+         npm test
          #npx mocha test/segmenttest.spec.js
         env:
          NODE_ENV: test
