--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -33,6 +33,24 @@ jobs:
 
       - name: Check Mocha version
         run: npx mocha --version
+
+      - name: Get Allure history
+        uses: actions/checkout@v2
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages  
+          
+      - name: Allure Report action from marketplace
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        id: allure-report
+        with:
+          allure_results: target/allure-results
+          gh_pages: gh-pages
+          allure_report: allure-report
+          allure_history: allure-history
         
       - uses: browser-actions/setup-chrome@v1
       - run: chrome --version
@@ -57,11 +75,15 @@ jobs:
         continue-on-error: true
         working-directory: ${{ github.workspace }}
 
-      - name: Upload Mochawesome Report
-        uses: actions/upload-artifact@v2
-        with:
-          name: mochawesome-report
-          path: /home/runner/work/UIAutomation-Selenium-NodeJS/UIAutomation-Selenium-NodeJS/mochawesome-report
+      # - name: Upload Mochawesome Report
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: mochawesome-report
+      #     path: /home/runner/work/UIAutomation-Selenium-NodeJS/UIAutomation-Selenium-NodeJS/mochawesome-report
+          
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v2  
         
       - name: Debugging Information
         run: |
