--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           ref: gh-pages
           path: gh-pages  
+          token: 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
           
       - name: Allure Report action from marketplace
         uses: simple-elf/allure-report-action@master
@@ -51,6 +52,7 @@ jobs:
           gh_pages: gh-pages
           allure_report: allure-report
           allure_history: allure-history
+          token: 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
         
       - uses: browser-actions/setup-chrome@v1
       - run: chrome --version
