--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -48,7 +48,7 @@ jobs:
         if: always()
         id: allure-report
         with:
-          allure_results: /home/runner/work/UIAutomation-Selenium-NodeJS/UIAutomation-Selenium-NodeJS/allure-results
+          allure_results: build/allure-results
           gh_pages: gh-pages
           allure_report: allure-report
           allure_history: allure-history
