--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          token: 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
+          token: ${{ secrets.SECRET_NAME }}
           
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -41,7 +41,7 @@ jobs:
         with:
           ref: gh-pages
           path: gh-pages  
-          token: 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
+          token: ${{ secrets.SECRET_NAME }}
           
       - name: Allure Report action from marketplace
         uses: simple-elf/allure-report-action@master
@@ -52,7 +52,7 @@ jobs:
           gh_pages: gh-pages
           allure_report: allure-report
           allure_history: allure-history
-          token: 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
+          token: ${{ secrets.SECRET_NAME }}
         
       - uses: browser-actions/setup-chrome@v1
       - run: chrome --version
@@ -87,7 +87,7 @@ jobs:
         if: always()
         uses: peaceiris/actions-gh-pages@v2
         env:
-          PERSONAL_TOKEN: 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
+          PERSONAL_TOKEN: ${{ secrets.SECRET_NAME }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history 
         
