--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          PERSONAL_TOKEN: ${{ secrets.SECRET_NAME }}
+          PERSONAL_TOKEN: ${{ secrets.API_TOKEN }}
           
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -85,7 +85,7 @@ jobs:
         if: always()
         uses: peaceiris/actions-gh-pages@v2
         env:
-          PERSONAL_TOKEN: ${{ secrets.SECRET_NAME }}
+          PERSONAL_TOKEN: ${{ secrets.API_TOKEN }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history 
         
