--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": " Selenium examples for Mocha and BrowserStack Automate",
   "scripts": {
-    "test": "npx mocha --reporter mochawesome spec ./test/segmenttest.spec.js --exit",
+    "test1": "npx mocha --reporter mochawesome spec ./test/segmenttest.spec.js --exit",
+    "test": "npx mocha -reporter allure-mocha test/rcsEngageTest.spec.js --exit",
     "report": "allure generate allure-results --clean && allure open"
   },
   "repository": {
