--- a/objects/objects.properties
+++ b/objects/objects.properties
@@ -45,7 +45,8 @@ segID = //div/table/thead/tr[1]/th/div/div[contains(text(),'ID')]/../../../../..
 segName = //div/table/thead/tr[1]/th/div/div[contains(text(),'ID')]/../../../../..//tbody/tr[2]/td[2]
 engList = //div/table/thead/tr[1]/th/div/div[contains(text(),'ID')]/../../../../..//tbody/tr
 engID = //div/table/thead/tr[1]/th/div/div[contains(text(),'ID')]/../../../../..//tbody/tr[2]/td[1]
-engName = //div/table/thead/tr[1]/th/div/div[contains(text(),'ID')]/../../../../..//tbody/tr[2]/td[2]
+engName1 = //div/table/thead/tr[1]/th/div/div[contains(text(),'ID')]/../../../../..//tbody/tr[2]/td[2]
+engName = //tbody/tr[2]/td[2]//p
 engagementName = //div/h3/div[contains(text(),'General')]/../../../..//div/p[contains(text(),'Engagement Name')]/..//input
 engagementLabel = //div/h3/div[contains(text(),'General')]/../../../..//div/p[contains(text(),'Label')]/..//input
 engageLabellist= //div/h3/div[contains(text(),'General')]/../../../..//div/p[contains(text(),'Label')]/..//div/li
@@ -54,6 +55,8 @@ smsEngageChooseClient = //div/h3/div[contains(text(),'General')]/../../../..//di
 smsEngageTemplateMsg = //div/h3/div[contains(text(),'Configure Template')]/../../../..//div/p[contains(text(),'Template Message')]/..//div/textarea
 EngagementSaveBtn = //button[contains(text(),'Save')]/..
 generalTab = //div/h3/div[contains(text(),'General')]/../..
+addAGoalTab = //div/h3/div[contains(text(),'Add a Goal')]/../..
+configureParamTab = //div/h3/div[contains(text(),'Configure Parameters')]/../..
 configureTempTab = //div/h3/div[contains(text(),'Configure Template')]/../..
 sameNameErrorMsg = //div[contains(text(),'Segment with same name already exist.')]/..
 atleastOneRuleErrorMsg = //div[contains(text(),'There must be at least 1 rule')]/..
@@ -62,6 +65,66 @@ addSMSMsgText = //div/textarea/../../p[contains(text(),'Template Message')]/..//
 scheduleSettingTab = //div/h3/div[contains(text(),'Schedule Settings')]/../..
 engSaveBtn = //div/button[contains(text(),'Save')]
 segmentBreadCrum = //div/nav/ol/li/a/span[text()='Segments']/..
+RCSChannelTab = //p[normalize-space()='RCS']/../..
+searchSegment_Channelflow = //div/p[contains(text(),'Create an Engagement') or contains(text(),'Copy an Engagement')]/../../..//input
+segmentList_channelflow = //div[@class='MuiBox-root css-r2kydm']/div/li
+proceedBtn_channelflow = //div/p[contains(text(),'Create an Engagement') or contains(text(),'Copy an Engagement')]/../../..//button[contains(text(),'Confirm And Proceed To Next Step')]
+apiInput = //div/p[contains(text(),'API')]/..//input
+apiList = //div[@class='MuiBox-root css-r2kydm']/div/li
+goalTypeDropDown = //div/p[contains(text(),'Goal Type')]/../div
+
+dropDownList = //div[@role='presentation']/div/ul/li
+dropDownList2 = //ul[@id="mui-48"]/li
+goalInput = //div/p[contains(text(),'Goal Event')]/..//input
+goalList = //div/p[contains(text(),'Goal Event')]/../div[2]/div/li
+goalList2 = //div/li
+mandatoryParamInput2 = (//div/p[contains(text(),'Mandatory Parameters')]/..//div/input)[2]
+contentTagsInput1 = (//div/p[contains(text(),'Content Tags')]/..//div/input)[1]
+contentTagsInput3 = (//div/p[contains(text(),'Content Tags')]/..//div/input)[3]
+
+contentAttributeInput1 = (//div/p[contains(text(),'Content Attribute')]/..//div/input)[1]
+contentAttributeInput3 = (//div/p[contains(text(),'Content Attribute')]/..//div/input)[3]
+
+contentTagsMediaDropDown = //div/p[contains(text(),'Content Tags')]/..//div/div[@role='combobox']
+contenttAttributeMediaDropDown = //div/p[contains(text(),'Content Attribute')]/..//div/div[@role='combobox']
+MediaList = //div[@id='menu-']//ul/li
+ContentTagUploadBtn11 = //div/p[contains(text(),'Content Tag')]/..//div/div[3]//span
+ContentTagUploadBtn = //div/p[contains(text(),'Content Tag')]/..//input[@type='file']
+ContentAttributeUploadBtn = //div/p[contains(text(),'Content Attribute')]/..//input[@type='file']
+ContentTagUploadedLabel = //div/p[contains(text(),'Content Tag')]/..//div/div//p
+ContentAttributeUploadedLabel = //div/p[contains(text(),'Content Attribute')]/..//div/div//p
+
+
+attributeBtn = //div/p[contains(text(),'Content Attribute')]/..//button[contains(text(),'Add Params')]
+pageUrlInput = //div/p[contains(text(),'Page URL is') or contains(text(),'Page URL')]/..//input
+NaviEngListPage = (//span[normalize-space()='Segments']/../../..//span)[3]
+engageIdslist = //tr/td[1]
+engageNameslist = //tr/td[2]
+engageCreatedBylist = //tr/td[3]
+engageDailyCaps = //tr/td[4]
+engageLevelBtns= //tr/td[5]
+engageSearch = //div/p[contains(text(),'List of Engagement')]/..//input
+engageSearchCloseBtn = (//div/p[contains(text(),'List of Engagement')]/..//button)[3]
+engageCopyBtn = (//tr/td[5]//button)[3]
+engagePreviewBtn = (//tr/td[5]//button)[2]
+engage3dotBtns = (//tr/td[5]//button)[1]
+
+GeneralExpandArrowBtn = //h3/div[contains(text(),'General')]/../..//button/*[name()='svg']
+AddAGoalExpandArrowBtn = //h3/div[contains(text(),'Add a Goal')]/../..//button/*[name()='svg']
+ConfigureParamExpandArrowBtn = //h3/div[contains(text(),'Configure Parameters')]/../..//button/*[name()='svg']
+ScheduleSettingExpandArrowBtn = //h3/div[contains(text(),'Schedule Setting')]/../..//button/*[name()='svg']
+rcsTemplateId1 = //div/p[contains(text(),'Template Id is a required field')]/..//input
+rcsTemplateId=configurationSettings.templateId
+rcsAllTabs=//button/*[name()='svg']/../../h3/..
+
+optionalParamCheckbox = //p[contains(text(),'Optional Parameters')]/..//input[@type='checkbox']/..
+optionalParamMsgType = //p[contains(text(),'Optional Parameters')]/..//input
+
+
+
+
+
+
 
 
 
