--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": " Selenium examples for Mocha and BrowserStack Automate",
   "scripts": {
     "test1": "npx mocha --reporter mochawesome spec ./test/segmenttest.spec.js --exit",
-    "test": "npx mocha --reporter allure-mocha spec ./test/rcsEngageTest.spec.js --exit",
+    "test": "npx mocha --reporter allure-mocha ./test/rcsEngageTest.spec.js --exit",
     "report": "allure generate allure-results --clean && allure open"
   },
   "repository": {
