--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -39,9 +39,9 @@ jobs:
       
       - name: Update /etc/hosts
         run: |
-          echo "3.86.156.221 ttl.lemnisk.co" | sudo tee -a /etc/hosts
-          echo "3.86.156.221 lemniskapi2.lemnisk.co" | sudo tee -a /etc/hosts
-          echo "3.86.156.221 appbackend.lemnisk.co" | sudo tee -a /etc/hosts
+          echo "3.212.156.67 adobe.lemnisk.co" | sudo tee -a /etc/hosts
+          echo "3.212.156.67 lemniskapi2.lemnisk.co" | sudo tee -a /etc/hosts
+          echo "3.212.156.67 appbackend.lemnisk.co" | sudo tee -a /etc/hosts
         
       - uses: actions/checkout@v1
       - run: npm ci
